sign in some fixes

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
             <div class="form-row">
               <div class="form-group">
                 <label for="date">التاريخ المطلوب *</label>
-                <input type="date" id="date" class="form-control" min="<?= today ?>" required>
+                <input type="date" id="date" class="form-control" required>
 
               </div>
 
