--- a/signin.html
+++ b/signin.html
@@ -7,7 +7,8 @@
   <title>تسجيل الدخول - Buzzy Bee خدمات التنظيف</title>
   <!-- أيقونات Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+
   <link rel="stylesheet" href="signInStyle.css">
 </head>
 
