--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" href="/BuzzyBee_CleaningServiceWebSite/assets/favicon.ico" type="image/x-icon">
+
 
   <link rel="preload" as="image" href="assets/image/cleaning_pic.avif" type="image/avif">
 
