--- a/signin.html
+++ b/signin.html
@@ -8,6 +8,7 @@
   <!-- أيقونات Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="icon" href="/BuzzyBee_CleaningServiceWebSite/assets/favicon.ico" type="image/x-icon">
 
   <link rel="stylesheet" href="signInStyle.css">
 </head>
