--- a/signup.html
+++ b/signup.html
@@ -7,6 +7,7 @@
   <title>إنشاء حساب - Buzzy Bee خدمات التنظيف</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="icon" href="/BuzzyBee_CleaningServiceWebSite/assets/favicon.ico" type="image/x-icon">
 
   <link rel="stylesheet" href="signupStyle.css">
 </head>
