--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css?v=12">
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="icon" href="/BuzzyBee_CleaningServiceWebSite/assets/favicon.ico" type="image/x-icon">
 
@@ -404,7 +405,7 @@
 
 
 
-  <script src="script.js"></script>
+  <script src="script.js?v=12"></script>
 </body>
 
 </html>
