finish the index and lang

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link rel="stylesheet" href="style.css?v=12">
+  <link rel="stylesheet" href="style.css?v=4">
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="icon" href="/BuzzyBee_CleaningServiceWebSite/assets/favicon.ico" type="image/x-icon">
@@ -40,6 +40,10 @@
           <a href="#offers">العروض</a>
           <a href="#booking">الحجز</a>
           <a href="signin.html">تسجيل الدخول</a>
+          <!-- اللغة -->
+          <a href="index-en.html" class="lang-item">
+            <i class="fas fa-language"></i> English
+          </a>
         </div>
       </div>
 
@@ -63,11 +67,14 @@
         <button class="themeBtn" id="themeToggle">
           <i class="fas fa-moon"></i>
         </button>
-        <!-- رابط اللغة -->
-          <a href="index-en.html" class="langBtn">EN</a>
-        </div>
+
+        <a href="index-en.html" class="langBtn" aria-label="English">
+          EN
+        </a>
 
       </div>
+
+    </div>
 
     </div>
   </header>
@@ -387,8 +394,8 @@
               <li><i class="fas fa-phone"></i> 0944453531</li>
               <li><i class="fas fa-envelope"></i> info@clean-service.com</li>
               <li><i class="fas fa-map-marker-alt"></i> طرابلس - ليبيا</li>
-              <li><i class="fas fa-clock"></i>  8 ص - 10 م طوال الأسبوع</li>
-              <li><i class="fas fa-laptop-code"></i> تطوير: ارجوان العائب & رغد  اعمار </li>
+              <li><i class="fas fa-clock"></i> 8 ص - 10 م طوال الأسبوع</li>
+              <li><i class="fas fa-laptop-code"></i> تطوير: ارجوان العائب & رغد اعمار </li>
             </ul>
           </div>
         </div>
