done orjwan change

--- a/index-en.html
+++ b/index-en.html
@@ -33,7 +33,7 @@
           <a href="#services">Services</a>
           <a href="#offers">Offers</a>
           <a href="#booking">Booking</a>
-          <a href="signin.html">Sign In</a>
+          <a href="signin-en.html">Sign In</a>
 
           <!-- اللغة -->
           <a href="index.html" class="lang-item">
@@ -52,7 +52,7 @@
           <li><a href="#services"><i class="fas fa-concierge-bell"></i>Services</a></li>
           <li><a href="#offers"><i class="fas fa-tag"></i>Offers</a></li>
           <li><a href="#booking"><i class="fas fa-calendar-check"></i>Booking</a></li>
-          <li><a href="signin.html"><i class="fas fa-user"></i>Sign In</a></li>
+          <li><a href="signin-en.html"><i class="fas fa-user"></i>Sign In</a></li>
         </ul>
       </nav>
       <div class="user-actions">
@@ -313,7 +313,7 @@
               <li><a href="#services">Services</a></li>
               <li><a href="#offers">Offers</a></li>
               <li><a href="#booking">Booking</a></li>
-              <li><a href="signin.html">Sign In</a></li>
+              <li><a href="signin-en.html">Sign In</a></li>
             </ul>
           </div>
           <div class="footer-column">
