--- a/index-en.html
+++ b/index-en.html
@@ -61,8 +61,8 @@
         
         </button>
 
-          <a href="index-en.html" class="langBtn" aria-label="English">
-            EN
+          <a href="index.html" class="langBtn" aria-label="Arabic">
+            AR
           </a>
       </div>
     </div>
